package com.directi.training.dip.exercice_refactored;

import java.io.IOException;

public interface DataReader {
    String readData() throws IOException;

}
