package com.directi.training.dip.exercice_refactored;

import java.io.IOException;

public interface DataWriter {
    int writeData(String inputString) throws IOException;

}
